methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:4: error: '(' expected but identifier found.
  if estSurBiscuit(){
     ^MethodsReturning:10: error: illegal start of simple expression
  }
  ^MethodsReturning:13: error: '(' expected but identifier found.
  if colonne(){
     ^MethodsReturning:25: error: illegal start of simple expression
} 
^